# libofa

./: .gitignore  Doxyfile.in  Makefile.am  Makefile.in  config.h.in  configure  configure.in  libofa.pc.in
examples/: Makefile.am  Makefile.in  example.cpp  protocol.cpp  protocol.h  uselame.cpp  wavefile.cpp
include/: Makefile.in
include/ofa1/: Makefile.in  ofa.h
lib/: Makefile.am  Makefile.in  error_op.h  fft_op.cpp  fftlibmkl_op.cpp  fftlibvdsp_op.cpp  fftlibw3_op.cpp  fftlibw_op.cpp  frametracker_op.cpp  frametracker_op.h  mainprint.cpp  signal_op.cpp  trackdata_op.cpp  trackframe_op.cpp  tracklist_op.cpp
lib/AFLIB/: Makefile.in  aflibConverter.cpp  aflibConverter.h  aflibConverterLargeFilter.h  aflibConverterSmallFilter.h
lib/JAMA/: Makefile.in  jama_svd.h  tnt_array1d.h  tnt_array1d_utils.h  tnt_array2d.h  tnt_array2d_utils.h  tnt_math_utils.h
win32/: libofa.vcproj
win32/.svn/: all-wcprops  entries
win32/.svn/text-base/: example.vcproj.svn-base  libofa.sln.svn-base
